[gd_scene load_steps=3 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
margin_left = 96.0
margin_top = 48.0
margin_right = 216.0
margin_bottom = 144.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 120.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 8.0
theme = ExtResource( 2 )
text = "Pause Menu"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 120.0
margin_bottom = 22.0
theme = ExtResource( 2 )

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 120.0
margin_bottom = 46.0
theme = ExtResource( 2 )
text = "Continue..."

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 120.0
margin_bottom = 70.0
theme = ExtResource( 2 )
text = "Main Menu..."

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 8.0
theme = ExtResource( 2 )
text = "Audio volume"
align = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 120.0
margin_bottom = 90.0
theme = ExtResource( 2 )
min_value = -50.0
max_value = 0.0

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
